k8s/blue/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: parrot
  namespace: parrot
spec:
  host: parrot
  subsets:
    - name: blue
      labels:
        version: blue
