k8s/blue/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: parrot
  namespace: parrot
spec:
  hosts:
    - "*"
  gateways:
    - parrot
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: parrot
            subset: blue
          weight: 100
